--- a/advisory.html
+++ b/advisory.html
@@ -95,7 +95,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-0" href="contact-us.php"
+                <a class="nav-link p-0" href="contact-us.html"
                   >Contact Us</a
                 >
               </li>
@@ -272,7 +272,7 @@
                <a class="d-inline-block" href="news.html">News</a>
              </li>
              <li class="position-relative">
-               <a class="d-inline-block" href="contact-us.php"
+               <a class="d-inline-block" href="contact-us.html"
                  >Contact us</a
                >
              </li>
